# TorrentX

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README (2).md  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
include/torrentx/crypto/: sha1.hpp
include/torrentx/download/: download_engine.hpp  file_storage.hpp  piece_manager.hpp
include/torrentx/peer/: peer_address.hpp  peer_connection.hpp  peer_manager.hpp
include/torrentx/protocol/: bitfield.hpp  handshake.hpp  message.hpp
include/torrentx/torrent/: bencode.hpp  torrent_file.hpp
include/torrentx/tracker/: tracker_client.hpp
include/torrentx/util/: byte_utils.hpp  error.hpp  logger.hpp  tcp_socket.hpp
sample/: README.md  hello.torrent  hello.txt
src/cli/: commands.cpp  commands.hpp  main.cpp
src/crypto/: sha1.cpp
src/download/: download_engine.cpp  file_storage.cpp  piece_manager.cpp
src/peer/: peer_connection.cpp  peer_manager.cpp
src/picotorrent/: application.cpp  buildinfo.hpp  main.cpp
src/protocol/: handshake.cpp  message.cpp
src/torrent/: bencode.cpp  torrent_file.cpp
src/tracker/: tracker_client.cpp
src/util/: byte_utils.cpp  logger.cpp  tcp_socket.cpp
tests/: CMakeLists.txt  test_main.cpp
